--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include header.html %}
   <body>
     <header role="banner" class="header-cont">
-    <h1><a href="{{ site.url }}">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR)/a></h1>
+    <h1><a href="{{ site.url }}">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR)</a></h1>
 	{% include menu.html %}
 	</header>
 	<div role="main">
