--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,9 +1,9 @@
 <div class="additional">
           <ul id="menu-main-menu">
          <li class="menu-item"><a href="/">About</a></li>
-            <li class="menu-item"><a href="/about">Ταυτότητα και Στόχοι</a></li>
-            <li class="menu-item"><a href="/membership">Οργανωτική δομή και συμμετοχή στο Δίκτυο</a></li>     
-            <li class="menu-item"><a href="/code_of_conduct">Αρχές συνεργασίας και συμπεριφοράς μελών εντός του δικτύου</a></li>       
-            <li class="menu-item"><a href="/contact">Επικοινωνία</a></li>
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/about">Ταυτότητα και Στόχοι</a></li>
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/membership">Οργανωτική δομή και συμμετοχή στο Δίκτυο</a></li>     
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/code_of_conduct">Αρχές συνεργασίας και συμπεριφοράς μελών εντός του δικτύου</a></li>       
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/contact">Επικοινωνία</a></li>
           </ul>
         </div>
