--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
   {% include header.html %}
   <body>
     <header role="banner" class="header-cont">
-    <h1><a href="https://amsichani.github.io/dh_gr/">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR)</a></h1>
+    <h1> <figure>
+	<img src="https://amsichani.github.io/dh_gr/images/dhgr.png" width="150px" style="float: left; margin-right: 15px; margin-bottom: 15px;" />
+</figure>
+	    <a href="https://amsichani.github.io/dh_gr/">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR)</a></h1>
 	{% include menu.html %}
 	</header>
 	<div role="main">
