--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   
    <p>{{ site.description | default: site.github.project_tagline }}</p>
             
-   <figure> <img src="{{site.url}}/images/dhgr.png"title="DiXiT logo"/>
+   <figure> <img src="{{site.url}}/images/dhgr.png"title="dh_gr_logo"/>
         </figure>
         	{% include menu.html %}
       </header>
