--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
      
       
       <header>
-        <h1><a href="{{ site.url }}">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR) </a></h1>
+        <h1><a href="https://amsichani.github.io/dh_gr/">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR) </a></h1>
         
             
    <figure> <img src="https://amsichani.github.io/dh_gr/images/dhgr.png"title="dh_gr_logo"/>
