--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
       <header>
         <h1><a href="https://amsichani.github.io/dh_gr/">Ελληνικό Ερευνητικό Δίκτυο Ψηφιακών Ανθρωπιστικών Επιστημών/ Greek Digital Humanities Research Network (@DH_GR) </a></h1>
         
-            
+             <p>{{ site.description | default: site.github.project_tagline }}</p>
+         
    <figure> <img src="https://amsichani.github.io/dh_gr/images/dhgr.png" title="dh_gr_logo"/>
         </figure>
         	{% include menu.html %}
