--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,9 @@
 <div class="additional">
           <ul id="menu-main-menu">
             <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/identity">Ταυτότητα </a></li>
-                <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/goals">Σκοπός και Στόχοι </a></li>      
-            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/membership">Οργανωτική δομή και συμμετοχή στο Δίκτυο</a></li>     
+                <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/goals">Σκοπός και Στόχοι </a></li>  
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/structure">Οργανωτική δομή </a></li>      
+            <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/membership">Συμμετοχή στο Δίκτυο</a></li>     
             <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/code_of_conduct">Αρχές συνεργασίας και συμπεριφοράς μελών εντός του δικτύου</a></li>       
             <li class="menu-item"><a href="https://amsichani.github.io/dh_gr/contact">Επικοινωνία</a></li>
           </ul>
